Fully migrated to JavaFX UI controls. Bye bye Swing :)

--- a/src/main/resources/translations/english.json
+++ b/src/main/resources/translations/english.json
@@ -21,10 +21,10 @@
   "19": "Selected Language",
   "20": "Save",
   "21": "",
-  "22": "insane",
-  "23": "fast",
-  "24": "normal",
-  "25": "slow",
+  "22": "Insane",
+  "23": "Fast",
+  "24": "Normal",
+  "25": "Slow",
   "26": "Are you insane?",
   "27": "Hard",
   "28": "Medium",
@@ -48,7 +48,7 @@
   "46": "Right/Next",
   "47": "Up",
   "48": "Down",
-  "49": "if you can't figure this out you're dumb :/",
+  "49": "Surely you can figure this out",
   "50": "Exit game",
   "51": "MOUSE",
   "52": "Scroll Up",
