Fixed "Is Left Handed" values in Option screen. Added respect for online values in navigation: Character Selection, Stage Selection, Gameplay [Pause/Exit]

--- a/src/main/resources/translations/english.json
+++ b/src/main/resources/translations/english.json
@@ -88,7 +88,7 @@
   "86": "Sweet!!",
   "87": "Good to go!!",
   "88": "Lets finish this!!",
-  "89": "Ownage playTime!!",
+  "89": "Ownage time!!",
   "90": "*Yawn* Lets end this fast!!",
   "91": "I shall destroy you!!",
   "92": "You stand no chance!!!!",
@@ -112,7 +112,7 @@
   "110": "Are you sure you want to leave?",
   "111": "SERIOUSLY DUDE! You wanna quit?",
   "112": "*sigh* Okay, bye ^_^",
-  "113": "Continue from last playTime",
+  "113": "Continue from last time",
   "114": "Back",
   "115": "EPIC!!! You completed story mode :D",
   "116": "Proceed to scene",
@@ -168,7 +168,7 @@
   "166": "Please wait while your opponent selects a stage",
   "167": "Your machines user is:",
   "168": "your partner has to enter you're user to fight you",
-  "169": "Press 'M' to pass playTime on a world map",
+  "169": "Press 'M' to pass time on a world map",
   "170": "Screen-shot taken",
   "171": "Yes",
   "172": "No",
@@ -194,7 +194,7 @@
   "192": "To what do I owe this pleasure?",
   "193": "The Royal Court, has decided to go after the criminals",
   "194": "I see",
-  "195": "Yes, we'd need as many able bodied Saints as possible, care to join the cause?",
+  "195": "Yes, we'd need as many able bodied Saints as possible. Care to join the cause?",
   "196": "Well...",
   "197": "Go ahead",
   "198": "Yeah, we aren't babies we can take care of ourselves. The Kingdom needs you more than we do",
@@ -298,14 +298,14 @@
   "296": "I stopped the girl, but that punk is getting away",
   "297": "I...I stopped you first",
   "298": "Shut up, its a draw alright",
-  "299": "Loser",
-  "300": "RAAAAAAAAAAAAAGH",
-  "301": "The hell",
-  "302": "DIE",
-  "303": "Lynx",
-  "304": "Darn, hes too....... strong",
+  "299": "Loser!!",
+  "300": "RAAAAAAAAAAAAAGH!!",
+  "301": "The hell!?",
+  "302": "DIE!!!!!",
+  "303": "Lynx!!!",
+  "304": "He's too... strong",
   "305": "I'll end this",
-  "306": "Ha ha ha! You have a death wish, boy??",
+  "306": "Fools, all of you... FOOLS!",
   "307": "Story Mode",
   "308": "Quick Match",
   "309": "Host a LAN match",
@@ -337,14 +337,14 @@
   "335": "All you have to do is select a a single move to Que it up.",
   "336": "More on that later",
   "337": "The Activity Bar (AB) is directly linked to your Command Menu (CM).",
-  "338": "It fills up over playTime and automatically governs your Turn.",
+  "338": "It fills up over time and automatically governs your Turn.",
   "339": "You cant do anything unless your AB is fully charged.",
   "340": "As you can see, your CM is disabled while your AB is not fully charged.",
   "341": "When your AB is fully activated, your CM is enabled, magic!!!",
   "342": "You can now proceed to Que up attacks.",
   "343": "Press ENTER to Skip",
   "344": "This is the Time Counter, here set to infinite",
-  "345": "Some rounds have a playTime limit, and you will see the countdown here.",
+  "345": "Some rounds have a time limit, and you will see the countdown here.",
   "346": "And now for the fun part!",
   "347": "As you can see, you initially have 4 empty slots.",
   "348": "You can select any move from any section.",
@@ -361,7 +361,7 @@
   "359": "Selecting Attacks",
   "360": "HUD Basics",
   "361": "You trigger Fury/Rage by pressing 'L' or clicking on the Flashing Fury Icon.",
-  "362": "Note, only one player can activate Fury at a playTime.",
+  "362": "Note, only one player can activate Fury at a time.",
   "363": "If your opponent triggers it first, you are in TROUBLE.",
   "364": "Tips and Tricks",
   "365": "slide",
@@ -375,23 +375,23 @@
   "373": "Stupid boy, this isn't over!!",
   "374": "*SMASH*",
   "375": "He blew a hole into the ground... hes escaping",
-  "376": "No, hes heading for the Hidden Chamber",
+  "376": "No, he's heading for the Hidden Chamber",
   "377": "What?",
   "378": "*Down in the Hidden Chamber*",
   "379": "Crap, lets get out of here!",
   "380": "Adam, we have to go",
-  "381": "We cant contain the Saints any longer",
+  "381": "We can't contain the Saints any longer",
   "382": "",
   "383": "There it is, I finally found the Crest",
-  "384": "*GRRRRRRRRR*",
+  "384": "GRRRRRRRRR",
   "385": "What the hell was that?",
   "386": "Did you think we would leave the Crest of Hope unprotected?",
-  "387": "Ive seriously had enough of you for one day",
+  "387": "I've seriously had enough of you for one day",
   "388": "No kidding",
   "389": "Its, some kind of a guardian!",
   "390": "Ive come too far, I wont lose now.....",
   "391": "I WONT LOSE EVER!!!",
-  "392": "Uh, now would be a good playTime to stand back",
+  "392": "Uh, now would be a good time to stand back",
   "393": "Thats it, enjoy the game!!!",
   "394": "DONE!!!",
   "395": "Take Your Time",
@@ -445,9 +445,8 @@
   "443": "Since the region is on alert the Ibex Academy is temporarily closed",
   "444": "Rather than you wasting away at home, we might as well make the best of this situation",
   "445": "This time things will be different",
-"446": "So arrogant. I won’t let you leave this place alive",
-"447": "I see that you know him. He'll probably need your help"
-"448": "I didnt expect this much resistance",
-"449": "Oh well, nothing a little mass murder cant fix",
-
+  "446": "So arrogant. I won’t let you leave this place alive",
+  "447": "I see that you know him. He'll probably need your help",
+  "448": "I didnt expect this much resistance",
+  "449": "Oh well, nothing a little mass murder cant fix"
 }
