Updated Text when waiting for Network Connection. Deleted unused classes

--- a/src/main/resources/translations/english.json
+++ b/src/main/resources/translations/english.json
@@ -166,9 +166,9 @@
   "164": "Random Stage!!!",
   "165": "LOADING",
   "166": "Please wait while your opponent selects a stage",
-  "167": "Your machines user is:",
+  "167": "Your machines name is:",
   "168": "your partner has to enter you're user to fight you",
-  "169": "Press 'M' to pass time on a world map",
+  "169": "",
   "170": "Screen-shot taken",
   "171": "Yes",
   "172": "No",
