One last major bug. One fury attack not registering in online mode. Added new screenshots. Changed up strength multiplier

--- a/src/main/resources/translations/english.json
+++ b/src/main/resources/translations/english.json
@@ -308,8 +308,8 @@
   "306": "Fools, all of you... FOOLS!",
   "307": "Story Mode",
   "308": "Quick Match",
-  "309": "Host a LAN match",
-  "310": "Join a LAN match",
+  "309": "Host a network match",
+  "310": "Join a network match",
   "311": "Your stats",
   "312": "Options",
   "313": "View Controls",
