Fixed bug where ADE was not selectable Upgraded to the latest version of JDS

--- a/src/main/resources/translations/english.json
+++ b/src/main/resources/translations/english.json
@@ -447,7 +447,7 @@
   "445": "This time things will be different",
   "446": "So arrogant. I won’t let you leave this place alive",
   "447": "I see that you know him. He'll probably need your help",
-  "448": "I didnt expect this much resistance",
+  "448": "I didn't expect this much resistance",
   "449": "Oh well, nothing a little mass murder cant fix",
   "450": "Connect to host",
   "451": "Please enter the hosts Machine Name or IP address",
